--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Croissant main information about the origin">
     <link rel="stylesheet" href="/style/style.css">
-    <title>Contact Page</title>
+    <title>Contact Page for those who love Croissants</title>
 </head>
 <body>
     <h1>
@@ -13,7 +14,7 @@
     </h1>
     <p>
       To contact croissant.com, please email us at
-        <a href="mailto:hello@croissant.com" title="contact us by email">hello@croissant.com</a>    
+        <a href="mailto:hello@croissant.mydomain.com" title="contact us by email">hello@croissant.mydomain.com</a>    
       for more info
     </p>
     <footer>
