--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Croissant main information about the origin">
     <link rel="stylesheet" href="/style/style.css">
-    <title>Croissant Page</title>
+    <title>Croissant Page - The most exciting information about Croissants</title>
 </head>
 <body>
     <h1>
@@ -21,7 +22,7 @@
     <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo.html" title="Croissant photo"> Photo</a>
-        <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+        <a href="/contact.html" title="Contact Croissant.MyDomain.com"> Contact</a>
     </footer>
 </body>
 </html>
