--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Croissant deliscious pictures for inspiration and watching!">
     <link rel="stylesheet" href="/style/style.css">
     <title>Croissant Photo</title>
 </head>
@@ -15,7 +16,7 @@
     <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo.html" title="Croissant photo"> Photo</a>
-        <a href="/contact.html" title="Contact Croissant.com"> Contact</a>
+        <a href="/contact.html" title="Contact Croissant.MyDomain.com"> Contact</a>
     </footer>
 </body>
 </html>
