--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff 
         pastry.
     </p>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis laboriosam non aperiam mollitia beatae repellendus ad eum possimus, reprehenderit voluptas pariatur distinctio deserunt, deleniti ab nulla animi sed voluptates! Voluptates.
+    </p>
     <footer>
         <a href="/" title="Home"> Homepage</a>
         <a href="/photo.html" title="Croissant photo"> Photo</a>
