--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Croissant main information about the origin">
+    <meta name="description" content="Croissant main information about the origin More: Croissant main information about the origin!">
     <link rel="stylesheet" href="/style/style.css">
     <title>Contact Page for those who love Croissants</title>
 </head>
