--- a/photo.html
+++ b/photo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Croissant deliscious pictures for inspiration and watching!">
+    <meta name="description" content="Croissant deliscious pictures for inspiration and watching!  More: Croissant main information about the origin!">
     <link rel="stylesheet" href="/style/style.css">
     <title>Croissant Photo</title>
 </head>
