--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Croissant main information about the origin More: Croissant main information about the origin!">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="canonical" href="https://earnest-marigold-eecadc.netlify.app/contact/" />
     <title>Contact Page for those who love Croissants</title>
 </head>
 <body>
