--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Croissant deliscious pictures for inspiration and watching!  More: Croissant main information about the origin!">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="canonical" href="https://earnest-marigold-eecadc.netlify.app/photo" />
     <title>Croissant Photo</title>
 </head>
 <body>
